--- a/templates/listing/add_listing.html
+++ b/templates/listing/add_listing.html
@@ -37,7 +37,8 @@
                         <button type="submit" name="type" value="Direct" class="btn btn-success btn-lg px-5">
                             <i class="fas fa-money-bill-wave"></i> Direct Sale
                         </button>
-                        <button type="button" onclick="alert('Auction coming soon!')" class="btn btn-outline-warning btn-lg px-5">
+                       
+                        <button type="submit" name="type" value="Auction" class="btn btn-outline-warning btn-lg px-5">
                             <i class="fas fa-gavel"></i> Auction
                         </button>
                     </div>
